# local-encoding-ng

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  posix.rs  windows.rs
