[package]
name = "local-encoding-ng"
license = "MIT"
version = "0.1.0"
authors = [ "Lukáš Tyrychtr <lukastyrychtr@gmail.com>" ]
description = "A rust library which simplifies the encoding and decoding from the local Windows Ansi codepage."
repository = "https://github.com/tyrylu/local-encoding-rs-ng"
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnls", "stringapiset"] }
